# voice-agents-for-financial-customers

./: .gitignore  ARCHITECTURE.md  README.md  ai_llm_advancements.txt  ai_llm_applications.txt  ai_llm_capabilities.txt  ai_llm_ethics.txt  ai_llm_limitations.txt  ai_llm_principles.txt  business_config.json  crypto_report.txt  fix_dispatch.py  menu.json  pyproject.toml  report.md  schema.sql
.claude/: settings.local.json
src/my_autonomous_agent/: api.py  config.py  crew.py  main.py  oilchange_agent.py  reservation_agent.py  webhook.py
src/my_autonomous_agent/booking/: reservations.py  supabase_client.py
src/my_autonomous_agent/config/: agents.yaml  biryani_paradise.json  city_clinic.json  quick_lube.json  tasks.yaml
src/my_autonomous_agent/tools/: custom_tool.py
src/my_autonomous_agent/utils/: sms.py
