[project]
name = "my_autonomous_agent"
version = "0.1.0"
description = "my_autonomous_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.10.1",
    "langchain-openai>=1.1.11",
    "python-dotenv>=1.1.1",
]

[project.scripts]
my_autonomous_agent = "my_autonomous_agent.main:run"
run_crew = "my_autonomous_agent.main:run"
train = "my_autonomous_agent.main:train"
replay = "my_autonomous_agent.main:replay"
test = "my_autonomous_agent.main:test"
run_with_trigger = "my_autonomous_agent.main:run_with_trigger"
serve = "my_autonomous_agent.api:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
